--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   "icons": { "64": "import.png" },
   "author": {"name": "spidergears", "twitter_handle": "spider_gears", "github": "http://github.com/spidergears"},
   "content_scripts": [ {
-      "js": [ "jquery-2.1.3.min.js", "import.js" ],
+      "js": [ "import.js" ],
       "matches": [ "http://*/*", "https://*/*"]
     }],
   "permissions": [ "bookmarks", "identity" ]
